Fix title top spacing with no header and custom background.

--- a/style.dev.css
+++ b/style.dev.css
@@ -155,8 +155,9 @@ body.centre #wrapper {
 }
 
 #title {
-    margin: 20px 0 -20px;
+    margin: 0 0 -20px;
     border-bottom: 1px solid #ccc;
+    padding-top: 20px;
 }
 
 #navigation {
